Fixed wrapping in book list.

--- a/packages/opds-web-client/src/stylesheets/book.scss
+++ b/packages/opds-web-client/src/stylesheets/book.scss
@@ -7,7 +7,6 @@
   overflow: hidden;
   height: $bookHeight;
   position: relative;
-  float: left;
 
   .info {
     background-color: rgba(255, 255, 255, 0.8);
