--- a/packages/opds-web-client/src/stylesheets/collection.scss
+++ b/packages/opds-web-client/src/stylesheets/collection.scss
@@ -24,7 +24,7 @@
   }
 
   .books li {
-    display: inline;
+    display: inline-block;
   }
 
   .navigation-links a {
